[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "iamhelpingstar@gmail.com", name = "Wooseong Park" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chex>=0.1.85",
    "flax>=0.8.0",
    "gymnax>=0.0.8",
    "jax>=0.4.27",
    "jaxlib>=0.4.27",
    "jumanji>=1.0.0",
]
description = "A reinforcement learning environment for block puzzle games based on JAX."
dynamic = [
    "version",
]
keywords = [
    "RL-environment",
    "block-puzzle",
    "game-ai",
    "jax",
    "machine-learning",
    "reinforcement learning",
]
name = "blockpuzzlax"
readme = "README.md"
requires-python = ">=3.10"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "pyright>=1.1.347",
    "pytest==7.1.3",
    "ruff>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/helpingstar/blockpuzzlax"
Issues = "https://github.com/helpingstar/blockpuzzlax/issues"

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/node_modules",
]
include = [
    "src/blockpuzzlax",
]
pythonPlatform = "All"
pythonVersion = "3.10"
reportMissingImports = "none"
reportMissingModuleSource = false
reportMissingTypeStubs = false

[tool.ruff]
exclude = [
    "examples/*.ipynb",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "F401",
]

[tool.setuptools.dynamic.version]
attr = "blockpuzzlax.__version__"
